--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,22 +34,8 @@
         }
     },
 
-    // Forward ports for Appsmith, PostgreSQL, and other services
-    "forwardPorts": [3000, 5432, 80],
-    "portsAttributes": {
-        "3000": {
-            "label": "Appsmith Client",
-            "onAutoForward": "notify"
-        },
-        "5432": {
-            "label": "PostgreSQL",
-            "onAutoForward": "notify"
-        },
-        "80": {
-            "label": "Appsmith Server",
-            "onAutoForward": "notify"
-        }
-    },
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	// "forwardPorts": [],
 
     // Use 'postCreateCommand' to run commands after the container is created.
     "postCreateCommand": "npm install",
