--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -29,9 +29,12 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null \
     && apt-get update \
     && apt-get -y install --no-install-recommends docker-ce-cli docker-compose-plugin \
-    # Install PostgreSQL client
-    && apt-get -y install --no-install-recommends postgresql-client \
+    # Install PostgreSQL client with SSL support
+    && apt-get -y install --no-install-recommends postgresql-client libpq-dev \
     && apt-get clean -y && rm -rf /var/lib/apt/lists/*
+
+# Install Neon CLI
+RUN su ${USERNAME} -c "umask 0002 && npm install -g neonctl"
 
 # [Optional] Uncomment this section to install additional OS packages.
 # RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
