--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -47,10 +47,10 @@
 	// "forwardPorts": [],
 
     // Use 'postCreateCommand' to run commands after the container is created.
-    "postCreateCommand": "npm install && npx prisma init",
+    "postCreateCommand": "npm install",
     
     // Add this line to start Appsmith when the Codespace starts
-    "postStartCommand": "cd ${containerWorkspaceFolder} && docker compose up -d",
+    "postStartCommand": "cd ${containerWorkspaceFolder} && docker compose up -d && npm run init-after-appsmith",
 
     // Set `remoteUser` to `root` to connect as root instead.
     "remoteUser": "node"
