--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,8 @@ services:
          - "443:443"
      volumes:
          - ./stacks:/appsmith-stacks
+     environment:
+         - APPSMITH_MONGODB_URI=mongodb://localhost:27017/appsmith
+         - APPSMITH_REDIS_URL=redis://localhost:6379
+         - APPSMITH_POSTGRES_HOST=localhost
      restart: unless-stopped
